data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_785.wast
;; 6. **Dynamic Branch Table within a Loop**:    - Implement a `br_table` within a loop that dynamically branches to different labels based on a variable. Ensure both implementations generate the correct CFG, reflecting the dynamic nature of the branch table.

(assert_invalid
  (module (func $dynamic_br_table_within_loop (param i32) (result i32)
    (local i32)
    (loop (param i32) (result i32)
      (block
        (br_table 1 0 (local.get 0))
        (i32.const 1)
      )
      (i32.const 2)
    )
  ))
  "type mismatch"
)